[package]
name = "strava-data"
version = "0.3.1"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Strava data api bindings"
homepage = "https://github.com/sajuthankappan/strava-data-rs"
repository = "https://github.com/sajuthankappan/strava-data-rs"
readme = "README.md"
keywords = ["strava"]
categories = ["api-bindings"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
surf = "1.0.3"
async-std="1.5.0"
getset = "0.1.0"
wasm-bindgen = { version = "0.2.59", optional = true }

[dev-dependencies]
env_logger = "0.7.1"