[package]
name = "strava-data"
version = "0.4.1"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Strava data api bindings"
homepage = "https://github.com/sajuthankappan/strava-data-rs"
repository = "https://github.com/sajuthankappan/strava-data-rs"
readme = "README.md"
keywords = ["strava"]
categories = ["api-bindings"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
log = "0.4.8"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
getset = "0.1.1"
wasm-bindgen = { version = "0.2.68", optional = true }

[dev-dependencies]
env_logger = "0.7.1"
tokio = { version = "0.2.22", features = ["macros"] }